methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:20: error: ';' expected but ',' found.
avance(),gauche();avance();avance();avance();gauche();gauche()
        ^