methods.picture.PictureMono1.scala.code
override def run() {
  
  
def peindre {
  baisseBrosse();leveBrosse()
}
  def faireV() {
    peindre();avance();droite();avance();peindre();recule();recule();peindre();avance();gauche();recule()
  }
  
  
gauche()
avance()
droite()
avance();avance();avance();droite()
for (i <- 1 to 3) {
	faireV()
	gauche();avance();avance();gauche();avance();avance();droite()
}
avance(),gauche();avance();avance();avance();gauche();gauche()


}